2004-05-01 07:10 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: Removed some NSLog messages.
	
2004-04-30 20:04 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Removed code which calls "awakeFromDocument:" on
	objects loaded in palettes.
	* GormDocument.m: [GormDocument loadGormDocument:] added back
	code which calls awakeFromDocument:.  Also in [GormDocument
	setDocumentActive:] removed code which was causing all menus
	to display instead of just the main menu when loading a .gorm.
	* GormMenuEditor.m: [GormMenuEditor activate] removed code
	which was causing all submenus to be displayed when the editor
	for a menu was activated.
	* GormMenuInspectors.m: Removed awakeFromDocument: method.
	* GormNSMenu.m: Commented out some old code.
	
2004-04-30 19:15 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Modified _repairFile so that it works. :)
	* Gorm.gorm: Removed some extraneous menu items/submenus.
	
2004-04-27 22:15 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormMenuEditor.m: [GormMenuEditor deleteSelection]
	added code to re-display and resize after an item is deleted. This
	corrects the problem where the menu item doesn't immediately disappear
	from the screen when deleted.
	
2004-04-27 21:50 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassInspector.m: Added code to properly collapse the item
	if the class is being edited in the class inspector.
	* GormClassManager.m: some improvements on the previous fix.
	
2004-04-27 01:28 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: Modified 
	[GormClassManager addAction:forClassNamed:],
	[GormClassManager addOutlet:forClassNamed:],
	[GormClassManager removeAction:fromClassNamed:],
	[GormClassManager removeOutlet:fromClassNamed:],
	[GormClassManager replaceAction:withAction:forClassNamed:],
	[GormClassManager replaceOutlet:withOutlet:forClassNamed:],